--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "vue-docker-test",
-  "version": "0.1.0",
+  
+"name": "{{projectName}}",
+  "version": "{{projectVersion}}",
+  "description": "{{projectDescription}}",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
